# autogen_firstlook

./: .gitignore  pyproject.toml
src/autogen_firstlook/: __main__.py  client.py  engine.py  factory.py  logs.py  settings.py  storage.py
src/autogen_firstlook/agents/: manager_agent.py  worker_agent.py
src/autogen_firstlook/communication/: messages.py  topics.py
src/autogen_firstlook/tools/: manager_tools.py
