[project]
name = "autogen_firstlook"
version = "2025.05.018"
requires-python = ">= 3.13"

dependencies = [
    "autogen-core>=0.5.7",
    "autogen-ext[ollama]>=0.5.7",
    "pydantic",
    "pydantic-settings",
    "ruff>=0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_firstlook"]
